Optimization on code and added unit testing
